# protoflow-ai

./: .gitignore  .ignore  AGENTS.md  CLAUDE.md  README.md
agent-runtime-python/: pyproject.toml  requirements.txt
agent-runtime-python/app/: main.py
agent-runtime-python/app/agent/: graph.py  state.py
agent-runtime-python/app/agent_loop/: execution_contract.py  execution_state.py  graph.py  legacy_state_adapter.py  message_builder.py  phase_report.py  progress.py  state.py  state_codec.py  state_v2.py  tool_history.py  tool_policy.py  tool_resolver.py  transition.py  transition_guard.py
agent-runtime-python/app/agent_loop_vnext/: event_mapper.py  runner.py  state.py  status_strategies.py
agent-runtime-python/app/api/: code_generation.py  knowledge_admin.py
agent-runtime-python/app/artifacts/: format_registry.py  manifest.py  types.py  writer.py
agent-runtime-python/app/core/: config.py  error_codes.py  exceptions.py  llm_audit.py  model_error_sanitizer.py
agent-runtime-python/app/events/: config_subscriber.py
agent-runtime-python/app/generation_modes/: __init__.py  application.py  registry.py  types.py
agent-runtime-python/app/graph/: definitions.py  workflow.py
agent-runtime-python/app/grpc/: code_generation_pb2.py  code_generation_pb2_grpc.py  common_pb2.py  knowledge_service_pb2.py  knowledge_service_pb2_grpc.py  platform_service_pb2.py  tool_service_pb2.py
agent-runtime-python/app/modeling/: policy.py  (+2 more)
agent-runtime-python/scripts/: e2e_test_ask_user.py  e2e_test_phase1.py  test_grpc_e2e.py
agent-runtime-python/tests/: test_prompt_capture.py
(+445 files in other folders)
