[project]
name = "protoflow-ai-agent-runtime"
version = "0.1.0"
description = "Python Agent Runtime for ProtoFlow AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "redis>=5.0.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "grpcio>=1.81.1",
  "grpcio-tools>=1.81.1",
  "prometheus_client>=0.20.0",
  "pyyaml>=6.0",
  "PyPDF2>=3.0.0",
  "python-docx>=1.1.0",
  "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["assets*"]

[build-system]
